--- a/Helpdesk/UserControls/UserControlDashboard.resx
+++ b/Helpdesk/UserControls/UserControlDashboard.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picnticket.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAPYAAAByCAYAAABgMywGAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAYWtJREFUeF7V3XeQFUe6NvhzZ76Iu7t/bsTduNPf7sY3d+bKjBDQNLR3gGYkIT/y
@@ -2110,10 +2110,10 @@
         dK0LFwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picVotreID.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAPYAAAByCAYAAABgMywGAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAScZJREFUeF7tnQeYVEW69/u63/etYgCUOGSYIedgAhHDrht03XDddO+6ht0151VR
+        vgAADr4B6kKxwAAAScZJREFUeF7tnQeYVEW69/u63/etYgCUOGSYIedgAhHDrht03XDddO+6ht0151VR
         QASJk6fP6SENOQkGMqjgkhQJoqioKKCCmDHsrmMAmfd736q3uqtPnzp1TveMd/e51vP8nuo+PUPPuv3r
         /1t16tSJqRY//+NY/ALkvI/+AznOPe+TmHPe4Zgz5CPJucyQD2LukPfwMTP43Zh77rvYv4P9O3iM+8GH
         sD+Ez7Ef/DY+f5v7g9gf5P4t7N+Iuee8EXPO2Y/9/lQ/eB++vg+fY3/O3pgzaG/MRZxBr+Pz1/E494Ne
