--- a/Helpdesk/UserControls/UserControlDashboard.resx
+++ b/Helpdesk/UserControls/UserControlDashboard.resx
@@ -540,7 +540,7 @@
         ewAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picRticket.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAPYAAAByCAYAAABgMywGAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAaUdJREFUeF7N3QeYFVWaB/y7Mzs75oQgNKBkEAVBzHF0dmdm95vZGXMOKCgZyaCg
