--- a/Helpdesk/UserControls/UserControlDashboard.resx
+++ b/Helpdesk/UserControls/UserControlDashboard.resx
@@ -995,7 +995,7 @@
         BK8KXjPs1H90+xc+5/d87t/M56ktlfp/AWpBxG8PL97gAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="picNotif.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAPYAAAByCAYAAABgMywGAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
         vAAADrwBlbxySQAAYnFJREFUeF7N3Qe4VOXVBuz5kuv/EzX2ggxI770oWLEn9g6KoCigoijWYANrNMZG
