--- a/Helpdesk/TechnicienForm.resx
+++ b/Helpdesk/TechnicienForm.resx
@@ -120,11 +120,11 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="buttoncontrole.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAYAAAB/HSuDAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vAAADrwBlbxySQAAADx0RVh0Q29tbWVudAB4cjpkOkRBRjFSeVJQRWxnOjE3LGo6NDUwNzM4ODM2Njg3
-        NDMxNDIwOSx0OjIzMTIwMjE075lZjgAAFPNJREFUeF7t3V9slWcdB3ASjF449cLopd6YeOOViRdtMbsw
-        Mb0gShQvTIzMxTi9MLuQP0FQ1CxZsuFWpm5OMSDU1Lb0DHVDJoWNQokbHDj82yjD0p4CK0Ol3aTtRvv+
-        fN/D23IoHaxcHE6yzyf55j09bd/n+vt7z/OcBQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAYAAAB/HSuDAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAA8dEVYdENvbW1lbnQAeHI6ZDpEQUYxUnlSUEVsZzozMCxq
+        OjU0NzM0MTQyNzYyOTc1MDA4NTIsdDoyNDAxMDgwOEhCu3wAABgHSURBVHhe7d1rcFzleQfwYxNIwiVN
+        2k5mmulgOlNmQpPJkLYhFwMdqLUOnSDJIs6YicGXFc7lQzuZTsmkHxp5ErtNAxSmsXwDBCYx1soYbMmD
+        SbgY22jXIRBrFVxsS5ZlW1g3a1e4vkj27vY9a8mDVehHS21/v5lnzp737HvO5/9z3nNOBAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -157,28 +157,42 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADA+8G/L49+OE3D7dJbLDXsP3Skkt40La2FT+a3AAAAAOpd
-        Wu4/nyZul95iKdLyX0n2+vEtXeWn2rZ/Kr8NAAAAUM/Scn9HA4DHtnQlLa2Fs0/+6ZmP57cCAAAA6lVa
-        7u90ABCPtxaSNIMbCzvvyW8HAAAA1KO03N/xAKCltZAladlaGN76XPcHF0TkdwUAAADqSlru7+wMgK0z
-        A4DKEGBDa+F/Lx4sLcxvCwAAANSTtNzPDADOvX4puntfnjMbNv4xdrzQMzME2Hfw8OwkB4rHvzoyMpLf
-        GQAAAKgb1QOACxcvxUtHT6Y5cWNKJ2JTe1c839M7MwCYKweKpSVhGwAAAADUn+oBwK3SO0fhnx0DAAAA
-        AKhTabmf9xkA7xYDAAAAAKhTabmfGQBc+u9Imuw6OyOxv1iq7PWfq/hn2ZfmQPGYAQAAAADUo+oBwPG+
-        M7FhU9vN2dwW31u+OjZ3FG4q/S8US7Hx1aH4dd9wLNt9pbuhPZ5u2pasWdQVH1u3zjAAAAAA6kL1ACB7
-        0t8/dOGmnE2TfQPA3pcOzZT/PcWjldK/vPx2rBgcj1XlifjKc29GQ0eSZGm8lqe+WIiP5EsBAAAAd0v1
-        AOBWqT4DYOfhE/HjgSuxMi3+64/0x8jVJJIkiQfX/DwyZ0aSWLrpZDS2TyWNHXFiUWd8Ol8OAAAAuBvS
-        cj+vAcCe4rFK+f/ZuYkoT0zFn/+2s1L+s7x6+kxlAJC9biv8NXaXI77UFdHYEaXGv1y9J18SAAAAqLW0
-        3N+wBeDc8Btzpnv/P2PXvgPxq77hypP/rPxPF//p0v/1+3+QXq+9nvb8wFQ0tVe2AzyaLwkAAADUWvUA
-        4OWjJ2PN+t/MmSXf/m4sXvZArDr/TuVj/9NP/qdlr7+WDwCmZe899NgT8a3O89HYnowu6ogP5MsCAAAA
-        tVQ9ALjd1wD+/pWhyoF/o5PXn/xPuz4AuHEokKXnfERDeyRNnfG5fFkAAACglqoHALdKdgZAdup/dtr/
-        dLGvNjk1FUuWPRBT6XW2N99OsnMAsm0AzfmyAAAAQC2l5f49DwCe6LsYq8+MxiO/3XzTAODMwFA0f/O+
-        eO1f/VH9m+zvlt7//WhqG8+GAEvyZQEAAIBaSsv99S0A/7kcp8+W0wzOSjm2/2N3rD86ECvLE3m1v1H2
-        5L9/sBwnT52O7/zwRzE2Np7/JuJy+i8NlYMA48v5sgAAAEAtVQ8AzpYvROeO7jmz7tGW+OmOfZUzAIbf
-        ubYFYPanAKaNjY/HheGLM3+zazCiobIFYOqz+bIAAABALVUPAG6VbAvA3kOlWF6eiIcP98eeAwfzuv/u
-        svL/h9a2WNo+HI0dycXGZ2NhviwAAABQS2m5f88DgP2HjsSTfa/HysHxOHZlcqbkz/4kwPR72dvbXkuy
-        rwBMmjqStQsi8lUBAACAmkrL/bwGAC+m11/0j8baoYk48tbV2FJ4dmYAUH3Nnvxn5f/ebZXT/3u+0B4f
-        ypcEAAAAai0t9/MaAGTZdfh4PNQ/GqsGx+OXfW/EK2OTMTY5Ffc9uCJGJiK6ByO+kX3s/9rBfz1Nz0x+
-        Il8OAAAAuBvScj/vAUCWvenPT586H6sHrsSK8kRlW8Div49VDvu7duBfcrGpM9Z68g8AAAB1IC33H03T
-        fLv0FkvNafG/IfvS9BwqNf/u1Lnmn5x9q3nxrqnmpo7k3kWdU59p2B4L7fkHAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/J+RzWan
+        7du372P5fL5c3d3dV4f9saPj6qPZTXunJ1LZj37tubevvvulno8taj1+TTKduyqZHrpiwcvD0xYuXBjN
+        vavmI3PmVF8zb97Xp8ezlixZEtXUzLnqrpo5V5ZPAwAAAEyObDYbB/5SCP/l6urqOhnGEmOHyyqa2pOz
+        m9p3zn2h++i9O/pPLnrteDGE/3Ohjofam0zn18yZM+f3Kiur9oY6U1lVVRfPq6mpqbizsmo47PdWVlZ+
+        uHwyAAAA4NKb2ADo6ekpdXZ2Dh87duymRKqtoiKVfau6paOwcNdgHPrjKtVm8u+tMJbv3ZF64JNvbHpo
+        +M1N/1Z8feODT/RF0bTXnv7X++L9UCPbnlz6+2OXBAAAAC618QbA4OBgOfz39/fHjYBCLpdLJlLZ9LwX
+        j5ZD//sE/wsVjp367stHbjjx1I9++O6G5V0nH/r7T8fnPpusvPLE+mU7Tvzix02lO75YfiwAAAAAmATj
+        DYA4+B8+fLjU19d3oQEw/9Xe9P8U/McqbhA0nqmt/vJosupMqEKo34x89vrLRpJVvwq/z4Xt2dHFVXPH
+        LgkAAABcauMNgDj4d3R0lN55550LDYAQ7tMTwv77VfwIwPKRZOXy0drqQlwh8J8aTc66MoT/7vGxUKvH
+        LgkAAABcauMNgIGBgdKRI0cuegQghPsPagAU31OFZDq/bHRx9ZdC4E+O1oZKVi/ee8+iy8Pvu8NY7Vjd
+        MnZJAAAA4FIbawCMhNB/oUL4Pz08PLwohPvxBkAxGYJ+2PYk07m6ha39ty/Y1V9TuWX/C9UtHSfnb+89
+        srh1KH5cIP7/hQpzWu99dfiTY5cCAAAAJkt7e/v0/fv3XxeCf1wzxqsvl7smhPjWUPFL/srP+c/e9uYn
+        ZjStevIvXtnYMTPd/NtQ82alfve5RCo7+LVn3y4ubh26aKVAMpMrhLGFY5cCAAAAJlsi1XZ9ojH75h0b
+        33ozmcmHyr0RQvyJUMXadD79mWc3fPa6Z1Yf+dJrmwsh+JdCFeO6Od38YEUqWx3mFuZs7Zz4tYC4cfBY
+        VCqNXQUAAACYVBWp9jsTjW2F6paOiSG+UJvJ3XNtqn7NF3ZsKt6aaYnDf+lv23eVnjz4VvGvMlsLM1uf
+        v7WiMdtd0dhWWrBz4L1zS7Xp3G4NAAAAAJgiEqm2BXEDYO4L3RcF+PLy/9bcF/5k4+r+xOvbStnentL9
+        v2st5XP50pbDB0o3p1vilQD/lGhqX51IZUvffOXYxPkddXWlaWOXAQAAACZTRartnrgB8PVthyYG+GIy
+        ffzL121cdfirr28r7u/vLQ3lcqXGQ28Xb860FGZmWo6H+n4I/+viBsD87b0Xz8/kD3yuTQMAAAAApoRE
+        Y/arFY1txarmAxc9AhC//T/sf/vaVP0///nLqWL1b35Zenj/njj8529pbZ51rPWxmx7f3nhNCP8d4Ryl
+        hbsGJzQAcrs8AgAAAABTxF9vaL+uojF7bnZT+8R3AMQv8nt75raXbrg2Vb/3ph2bCiH8F2dmWn796w1L
+        bxzYufZcPt3wD4mm9jXx4wP/bW4mVx/tsAIAAAAApoRP3d43LZHKvlGRyhbv3dF/cZBP54qh3vijZd//
+        0IymlfM+8/zPN8/MtNTtSdUlBnauLeTTDcu+8avDP50Q/sM58ueSmfy8KLICAAAAAKaMWam2L1Y0ti27
+        +6WeZSG4/zgE+sPxt/xr0/liCPTx5wD7wv7GcOyHIdx/970NgHC8KoxvCXMeCduNi9O5fw/b3gU7hz4x
+        dnoAAABgssX36BPz50cd9dHtQxuiH4w2T78xmR6aGwL9fSH0v1tuAFyoXCGMte5JLZ0dNwCO73p03XCm
+        4e8ObHngL4fSDUuOvrji1ly6YdH9rV1/fP7sAAAAwKR75h+jyzpXRd878Ux0Y/faqGm4KSqMNkfLT2+O
+        Zp5qnv43S1oH70umc6fGGwDJTP5gsjX/rfEVAD0vrigM736iuG/zT87mM08UD217+Gwu3fCfuUzDp8Yu
+        AQAAAEy2gyujxb3ronMh9I+c2RIVR5qjc6EKoUZCjZ7acvkti9P57yXT5RcCFu9/df+fheC//uDWB78T
+        tsWeF39WCsG/tG/zT8rbQ9seLuXSDSfzu9daAQAAAABTQfyFvq5V0Ye6Vke9oyHsn22Olo62RHf2PxU9
+        lWuMimHsSNtjn78imcnfVXv+k4D9ezbU3dr36urisVdWjvbvWFM6qgEAAAAAU1vniuijRx+Pdp98tnzn
+        P312Z3RZPN69Nrqqc2U0eHpzVBhtiTIPbW+8Pn4hYKi+3z699La4ATDU+ngprsFdj8aBvxTGytuBnWs1
+        AAAAAGAq6aiPrj7yWHQqXvIfgn7LuV3nx9+pi6Z3roz2nXqu3Bg4+aNNy//0jmf39n9z+7HO8QZAfLf/
+        g0oDAAAAAKaQg49E0w6timYcfjQaGmmJ3h3dGn0lHu9YEX2rd135ZYADo5ujGQNb/3Dabav3fmTW09k/
+        2PN03Vd6X1lZiO/2v1/4j0sDAAAAAKaQ+PN/HfXRbT0N0fBIc/luf1xDZ+Kl/+F3qONh/9Pn/33ef6z7
+        wRUdLQ/8IoT8D2wCaAAAAADAFJNdFX24a3X0/OnN0c8G10ddp88v+399dEu0YrQ5+nlpfXT52F8veOu5
+        f7nqQPNPd8fvANAAAAAAgP8l4pUAcXXWRzVDG6L6EPxnlg98gLq6uqhtfd0N/TvX1IfAv3Ji5dINj+R3
+        r/342N8BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -211,8 +225,7 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgPenBQv+D44R1ME87iUEAAAA
-        AElFTkSuQmCC
+        AAAAgP8noui/AHU0r4nZlqDuAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="btnlogout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
